@@ -40,6 +40,7 @@ import org.junit.platform.engine.support.hierarchical.HierarchicalTestExecutorSe
 import org.junit.platform.engine.support.hierarchical.ThrowableCollector;
 import org.reflections.Reflections;
 
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.nio.file.Paths;
 import java.util.ArrayList;
@@ -148,8 +149,8 @@ public class ContainerMatrixTestEngine extends ContainerMatrixHierarchicalTestEn
 
     private <T> T instantiateFactory(Class<? extends T> providerClass) {
         try {
-            return providerClass.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            return providerClass.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             throw new RuntimeException("Unable to construct instance of " + providerClass.getSimpleName() + ": ", e);
         }
     }
@@ -169,6 +170,7 @@ public class ContainerMatrixTestEngine extends ContainerMatrixHierarchicalTestEn
         final Set<Class<?>> annotated = reflections.getTypesAnnotatedWith(ContainerMatrixTestsConfiguration.class);
         final Set<Integer> extraPorts = getExtraPorts(annotated);
         final List<URL> mongoDBFixtures = getMongoDBFixtures(annotated);
+        final boolean withMailServerEnabled = isMailServerRequired(annotated);
 
         if (testAgainstRunningESMongoDB()) {
             // if you test from inside an IDE against running containers
@@ -200,7 +202,8 @@ public class ContainerMatrixTestEngine extends ContainerMatrixHierarchicalTestEn
                                                                     mongoVersion,
                                                                     extraPorts,
                                                                     mongoDBFixtures,
-                                                                    getEnabledFeatureFlags(Lifecycle.VM, annotated));
+                                                                    getEnabledFeatureFlags(Lifecycle.VM, annotated),
+                                                                    withMailServerEnabled);
                                                             new ContainerMatrixTestsDiscoverySelectorResolver(engineDescriptor).resolveSelectors(discoveryRequest, testsDescriptor);
                                                             engineDescriptor.addChild(testsDescriptor);
                                                         })
@@ -220,7 +223,7 @@ public class ContainerMatrixTestEngine extends ContainerMatrixHierarchicalTestEn
                                                                     mongoVersion,
                                                                     extraPorts,
                                                                     new ArrayList<>(),
-                                                                    getEnabledFeatureFlags(Lifecycle.CLASS, annotated));
+                                                                    getEnabledFeatureFlags(Lifecycle.CLASS, annotated), withMailServerEnabled);
                                                             new ContainerMatrixTestsDiscoverySelectorResolver(engineDescriptor).resolveSelectors(discoveryRequest, testsDescriptor);
                                                             engineDescriptor.addChild(testsDescriptor);
                                                         })
@@ -231,6 +234,15 @@ public class ContainerMatrixTestEngine extends ContainerMatrixHierarchicalTestEn
         }
 
         return engineDescriptor;
+    }
+
+    private boolean isMailServerRequired(Set<Class<?>> annotatedClasses) {
+         return annotatedClasses
+                .stream()
+                .map(aClass -> AnnotationSupport.findAnnotation(aClass, ContainerMatrixTestsConfiguration.class))
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .anyMatch(ContainerMatrixTestsConfiguration::withMailServerEnabled);
     }
 
     @Override
